crates/adapters/swath-udf-wasmtime/tests/snapshots/determinism__assemblyscript-double_3x2_output.snap
---
source: crates/adapters/swath-udf-wasmtime/tests/determinism.rs
expression: planes
---
[
  {
    "value_bits": [
      "3ff999999999999a",
      "3ff3333333333333",
      "3ff0000000000000",
      "0000000000000000",
      "3ffccccccccccccd",
      "0000000000000000"
    ],
    "valid": [
      true,
      true,
      true,
      true,
      true,
      false
    ]
  }
]
