crates/adapters/swath-udf-wasmtime/tests/snapshots/determinism__hillshade_3x2_output.snap
---
source: crates/adapters/swath-udf-wasmtime/tests/determinism.rs
expression: planes
---
[
  {
    "value_bits": [
      "0000000000000000",
      "0000000000000000",
      "0000000000000000",
      "0000000000000000",
      "0000000000000000",
      "0000000000000000"
    ],
    "valid": [
      false,
      false,
      false,
      false,
      false,
      false
    ]
  }
]
