crates/adapters/swath-udf-wasmtime/tests/snapshots/determinism__ndvi_3x2_output.snap
---
source: crates/adapters/swath-udf-wasmtime/tests/determinism.rs
expression: planes
---
[
  {
    "value_bits": [
      "3fe8e38e38e38e39",
      "3fdfffffffffffff",
      "4008000000000000",
      "0000000000000000",
      "0000000000000000",
      "0000000000000000"
    ],
    "valid": [
      true,
      true,
      true,
      false,
      false,
      false
    ]
  }
]
