crates/adapters/swath-udf-wasmtime/tests/snapshots/determinism__qamask_3x2_output.snap
---
source: crates/adapters/swath-udf-wasmtime/tests/determinism.rs
expression: planes
---
[
  {
    "value_bits": [
      "0000000000000000",
      "0000000000000000",
      "0000000000000000",
      "3ff0000000000000",
      "0000000000000000",
      "0000000000000000"
    ],
    "valid": [
      false,
      false,
      false,
      true,
      false,
      false
    ]
  }
]
