crates/adapters/swath-udf-wasmtime/tests/snapshots/determinism__tinygo-negate_3x2_output.snap
---
source: crates/adapters/swath-udf-wasmtime/tests/determinism.rs
expression: planes
---
[
  {
    "value_bits": [
      "bfe999999999999a",
      "bfe3333333333333",
      "bfe0000000000000",
      "8000000000000000",
      "bfeccccccccccccd",
      "8000000000000000"
    ],
    "valid": [
      true,
      true,
      true,
      true,
      true,
      false
    ]
  }
]
